--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -613,4 +613,8 @@ config CHARGER_RT9455
 
 source "drivers/power/supply/qcom/Kconfig"
 
+# vayu
+source "drivers/power/supply/maxim_vayu/Kconfig"
+source "drivers/power/supply/ti_vayu/Kconfig"
+
 endif # POWER_SUPPLY
